--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,11 +10,16 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+      .bg-color{
+        background-color: #f0f0f0;
+      }
+    </style>
 
     <title>HES OTOMOTIV - ADMIN PANEL</title>
 
   </head>
-  <body class="bg-light">
+  <body class="bg-color">
 
     <div id="root"></div>
 
