--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/images/HES-OTOMOTIV-LOGO.png" />
     <link rel="shortcut icon"  href="/images/HES-OTOMOTIV-LOGO.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <link rel="apple-touch-icon" href="/images/HES-OTOMOTIV-LOGO.png" />
     <link rel="manifest" href="/images/HES-OTOMOTIV-LOGO.png" />
 
